--- a/CocoaHeadsNL/CocoaHeadsNL/MeetupCell.xib
+++ b/CocoaHeadsNL/CocoaHeadsNL/MeetupCell.xib
@@ -26,7 +26,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="99" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MZp-Mr-LWd">
-                                <rect key="frame" x="2" y="28" width="40" height="26"/>
+                                <rect key="frame" x="2" y="25" width="40" height="26"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="20"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                 <nil key="highlightedColor"/>
@@ -38,7 +38,7 @@
                         </constraints>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FvW-QZ-rpN">
-                        <rect key="frame" x="52" y="6" width="33" height="21"/>
+                        <rect key="frame" x="52" y="6" width="260" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
@@ -50,14 +50,8 @@
                             <constraint firstAttribute="height" constant="44" id="Pba-FY-dfL"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yK-aX-WfD">
-                        <rect key="frame" x="93" y="10" width="30" height="16"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUf-ki-cyy">
-                        <rect key="frame" x="52" y="31" width="216" height="16"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EUf-ki-cyy">
+                        <rect key="frame" x="52" y="46" width="216" height="16"/>
                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                         <color key="textColor" red="0.64241727941176474" green="0.64241727941176474" blue="0.64241727941176474" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -69,23 +63,30 @@
                             <constraint firstAttribute="height" constant="1" id="NXd-c6-2Ih"/>
                         </constraints>
                     </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5yK-aX-WfD">
+                        <rect key="frame" x="52" y="28" width="30" height="16"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                        <nil key="highlightedColor"/>
+                    </label>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="5rM-DP-vIx" secondAttribute="trailing" id="0ob-zE-r3Z"/>
                     <constraint firstAttribute="trailing" secondItem="Lev-tK-HJm" secondAttribute="trailing" id="4Z4-7c-iub"/>
                     <constraint firstItem="Lev-tK-HJm" firstAttribute="leading" secondItem="EUf-ki-cyy" secondAttribute="trailing" constant="8" id="7LE-9g-GxA"/>
                     <constraint firstItem="FvW-QZ-rpN" firstAttribute="leading" secondItem="0ui-YP-aIQ" secondAttribute="trailing" constant="8" id="90v-CJ-0jA"/>
-                    <constraint firstItem="5yK-aX-WfD" firstAttribute="leading" secondItem="FvW-QZ-rpN" secondAttribute="trailing" constant="8" id="ROP-2Q-Kw4"/>
+                    <constraint firstItem="5yK-aX-WfD" firstAttribute="top" secondItem="FvW-QZ-rpN" secondAttribute="bottom" constant="1" id="L5c-cn-QBS"/>
+                    <constraint firstItem="5yK-aX-WfD" firstAttribute="leading" secondItem="FvW-QZ-rpN" secondAttribute="leading" id="LJZ-7W-jd8"/>
+                    <constraint firstAttribute="trailing" secondItem="FvW-QZ-rpN" secondAttribute="trailing" constant="8" id="RUt-iD-lbU"/>
                     <constraint firstItem="5rM-DP-vIx" firstAttribute="leading" secondItem="etl-Ja-pf7" secondAttribute="leading" id="T5j-xf-GOL"/>
                     <constraint firstItem="FvW-QZ-rpN" firstAttribute="leading" secondItem="EUf-ki-cyy" secondAttribute="leading" id="XGL-pl-en0"/>
                     <constraint firstItem="Lev-tK-HJm" firstAttribute="top" secondItem="etl-Ja-pf7" secondAttribute="top" constant="32" id="Z7Q-az-cB3"/>
                     <constraint firstAttribute="bottom" secondItem="0ui-YP-aIQ" secondAttribute="bottom" id="ZJ7-WD-Qgg"/>
                     <constraint firstItem="0ui-YP-aIQ" firstAttribute="top" secondItem="etl-Ja-pf7" secondAttribute="top" id="lKC-zX-2ha"/>
                     <constraint firstItem="5rM-DP-vIx" firstAttribute="top" relation="greaterThanOrEqual" secondItem="EUf-ki-cyy" secondAttribute="bottom" constant="2" id="lYI-MZ-3za"/>
-                    <constraint firstItem="EUf-ki-cyy" firstAttribute="top" secondItem="FvW-QZ-rpN" secondAttribute="bottom" constant="4" id="tKK-p1-qnl"/>
+                    <constraint firstItem="EUf-ki-cyy" firstAttribute="top" secondItem="5yK-aX-WfD" secondAttribute="bottom" constant="2" id="rCJ-ww-JsV"/>
                     <constraint firstAttribute="bottom" secondItem="5rM-DP-vIx" secondAttribute="bottom" id="vo2-rZ-TLe"/>
                     <constraint firstItem="FvW-QZ-rpN" firstAttribute="top" secondItem="etl-Ja-pf7" secondAttribute="top" constant="6" id="yLr-Bv-JVu"/>
-                    <constraint firstItem="FvW-QZ-rpN" firstAttribute="baseline" secondItem="5yK-aX-WfD" secondAttribute="baseline" id="yrz-1O-FQJ"/>
                     <constraint firstItem="0ui-YP-aIQ" firstAttribute="leading" secondItem="etl-Ja-pf7" secondAttribute="leading" id="zxh-qP-Kh1"/>
                 </constraints>
             </tableViewCellContentView>
